<resources>
    <string name="app_name">UpdateNews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_log_out">LogOut</string>
    <string name="action_filter">Language Filter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forget password</string>
    <string name="about_us">About us</string>
    <string name="new_here">New here</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email_address">currentnewsforme@gmail.com</string>
    <string name="subject">Feedback</string>
    <string name="no_internet_connectivity_error">No internet connectivity detected. Please reconnect and try again.</string>

    <string name="title_activity_detail_view">DetailViewActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="loading">please wait while loading</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_user_name">Name</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="select_image_gallery">Select Image from gallery</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="language">Select Language</string>
    <string name="share_news">Share</string>
    <string-array name="array_language">
        <item>English(en)</item>
        <item>German(de)</item>
    </string-array>

</resources>

